complete redesign scss

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -26,7 +26,7 @@
 	},
 
 	"skills" : {
-		"title" : "Meine Stapel",
+		"title" : "Meine",
 		"privacyline" : "Fähigkeiten",
 		"description" : "Mein Ausbildungsschwerpunkt an der Developer Akademie lag auf der Entwicklung dieser Kernkompetenzen und Tools:",
 		"peelAni" : "Zum Öffen ziehen",
